Fix responsive layout bug

--- a/menu.css
+++ b/menu.css
@@ -6,13 +6,15 @@
 }
 
 body {
-	margin: 10px 5px 10px 5px;
+	margin: 0px;
 	font-family: arial, helvetica, verdana;
 }
 
 h1 {
 	text-align: center;
 	font-size: 175%;
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
 h3 {
@@ -33,16 +35,12 @@ p {
 .section {
 	background: #ffdf80;
 	border: 1px solid black;
-	margin: .5em;
-	width: 32%;
-	float: left;
-}
-
-#outerBox {
 	width: 100%;
-	margin-left: auto;
 	margin-right: auto;
-}
+	margin-left: auto;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	}
 
 #heading1 {
 	background: #B0C4DE;
@@ -65,6 +63,7 @@ p {
 @media (min-width: 992px) {
 	.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
 		float: left;
+		padding: 5px 10px 5px 10px;
 	}
 	.col-lg-1 {
 		width: 8.33%;
@@ -119,11 +118,9 @@ p {
 @media (min-width: 768px) and (max-width: 991px) {
 	.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
 		float: left;
+		padding: 5px 10px 5px 10px;
 	}
 
-	.col-lg-1 {
-		width: 8.33%;
-	}
 	.col-md-1 {
 		width: 8.33%;
 	}
@@ -164,7 +161,6 @@ p {
 		width: 83.33%;
 	}
 
-
 	.col-md-11 {
 		width: 91.66%;
 	}
@@ -173,24 +169,62 @@ p {
 		width: 100%;
 	}
 
-	#box1 {
-		width: 48%;
-	}
-
-	#box2 {
-		width: 48%;
-	}
-
-	#box3 {
-		width: 98%;
-	}
 }
 
 @media (max-width: 767px) {
-	.section {
+	.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
 		float: left;
+		padding: 5px 10px 5px 10px;
+	}
+
+	.col-sm-1 {
+		width: 8.33%;
+	}
+
+	.col-sm-2 {
+		width: 16.66;
+	}
+
+	.col-sm-3 {
+		width: 25%;
+	}
+
+	.col-sm-4 {
+		width: 33%;
+	}
+
+	.col-sm-5 {
+		width: 41.66%;
+	}
+
+	.col-sm-6 {
+		width: 50%;
+	}
+
+	.col-sm-7 {
+		width: 58.33%;
+	}
+
+	.col-sm-8 {
+		width: 66.66%;
+	}
+
+	.col-sm-9 {
+		width: 74.99%;
+	}
+
+	.col-sm-10 {
+		width: 83.33%;
+	}
+
+	.col-sm-11 {
+		width: 91.66%;
+	}
+
+	.col-sm-12 {
 		width: 100%;
 	}
+	
 }
 
 /*end media queries */
